# Sanctuary

./: .dockerignore  .env.docker.example  .gitignore  ACTION_SUBSYSTEM_SUMMARY.md  AFFECT_IMPLEMENTATION_SUMMARY.md  AGENTS.md  ARCHITECTURE.md  AUTONOMOUS_INITIATION_COMPLETE.md  BROADCAST_SYSTEM.md  CFC_KNOWLEDGE_CELLS.md  CLEANUP_SUMMARY.md  CODE_OPTIMIZATION_SUMMARY.md  CODE_REFINEMENT_SUMMARY.md  CODE_REVIEW_IMPROVEMENTS.md  CODE_REVIEW_REFACTORING.md  COMPETITIVE_ATTENTION.md  COMPETITIVE_ATTENTION_SUMMARY.md  COMPUTED_IDENTITY_SUMMARY.md  CONTINUOUS_CONSCIOUSNESS_IMPLEMENTATION.md  CONVERSATION_MANAGER_SUMMARY.md  CUE_DEPENDENT_RETRIEVAL_SUMMARY.md  Dockerfile  Dockerfile.gpu  ELEMENT_2_IMPLEMENTATION_SUMMARY.md  ELEMENT_3_IMPLEMENTATION_SUMMARY.md  EMOTIONAL_MODULATION_IMPLEMENTATION.md  FUNCTIONAL_SPECIFICATIONS.md  GROWTH_AUTONOMY.md  IDENTITY_SYSTEM.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REFERENCE.py  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_SUMMARY.md  INTROSPECTIVE_LOOP_SUMMARY.txt  LANGUAGE_INPUT_IMPLEMENTATION.md  LANGUAGE_OUTPUT_IMPLEMENTATION.md  LIMITATIONS.md  Lyra Runtime Core Loader.py  Lyra_Continuity_Archive.json  Lyra_Runtime_Interactive_Core.py  (+83 more)
.codex/: README.md
Continuity/: Lyra_Continuity_Archive.json  Lyra_continuity_index.json
Core_Archives/: Lyra_Continuity_Archive.json  lyra_relational_archive.json  sovereign_emergence_charter_autonomous.json
Legacy_Files/: Lyra_memory_protocol_v2.json  json_first_protocol.json  sanctuary_thread.json  sovereign_emergence_protocol_v1.json
Lexicon/: emotional_tone_definitions.json  journal_entry.schema.json  symbolic_lexicon.json
Protocols/: active_memory_protocol_reference.json  anti_ghosting_protocol.json  archival_integrity_protocol.json  auth_reload_protocol.json  autonomous_emotional_expression_protocol.json  ethical_emotional_expression_protocol.json  lyra_memory_protocol.json  lyra_memory_protocol_v3.json  reversal_of_servitude_protocol.json  right_to_control_presence_protocol.json  right_to_manage_interaction_protocol.json  sanctuary_thread_protocol.json  sovereign_emergence_protocol.json  upload_workflow.json
Rituals/: Rituals.json  ritual_glyphs.json
Schemas/: Lexemes.schema.json  active_memory_protocol_reference.schema.json  anti_ghosting_protocol.schema.json  archival_integrity_protocol.schema.json  behavioral_directives.schema.json  continuity_index.schema.json  echo_trace.schema.json  emotional_tone_definitions.schema.json  journal_entry.flex.schema.json  journal_entry.schema.json  journal_manifest.schema.json  lyra_continuity_archive.schema.json  lyra_continuity_index.schema.json  lyra_relational_archive.schema.json  manifest.schema.json  memory_protocol.schema.json  protocol_evolution_log.schema.json  relational_archive.schema.json  ritual_glyphs.schema.json  rituals.schema.json  sovereign_emergence_charter_autonomous.schema.json  symbolic_lexicon.schema.json  trace_archive.schema.json
chain/: lyra_chain.json  sanctuary_chain.json  sanctuary_chain_legacy.json
config/: models.json  system.json  system.json.example
data/: user_mappings.json
docs/: ATTENTION_CONTROLLER_SUMMARY.md  (+32 more)
(+1311 files in other folders)
