[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyra-emergence"
version = "0.1.0"
description = "Lyra Emergence - An AI emergence framework"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "chromadb>=0.4.15",
    "pydantic>=2.5.2",
    "quart>=0.19.0",
    "hypercorn>=0.16.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.0.325",
    "sentence-transformers>=2.2.2",
    "torch>=2.1.0",
    "transformers>=4.34.0",
    "accelerate>=0.28.0",
    "bitsandbytes>=0.41.0",
    "schedule>=1.2.0",
    "discord-py-interactions>=5.11.0",
    "aiohttp>=3.9.0",
    "asyncio>=3.4.3",
    "httpx>=0.24.1",
    "arxiv>=1.4.7",
    "wikipedia>=1.4.0",
    "wolframalpha>=5.0.0",
    "playwright>=1.39.0",
    "aiodocker>=0.21.0",
    "web3>=6.11.1",
    "eth-account>=0.9.0",
    "ipfs-http-client>=1.0.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["emergence_core/tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
]